Project_1/image_2/Service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: ns2
spec:
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
